export const snapshot = {};

snapshot[`log: default config 1`] = `
[
  [
    "\\x1b[90m01/01/1970 01:00:00.000 GMT+1\\x1b[39m \\x1b[48;5;15m\\x1b[38;5;15m[\\x1b[39m\\x1b[30mINFO   \\x1b[39m\\x1b[38;5;15m]\\x1b[39m\\x1b[49m \\x1b[1m ??? >\\x1b[22m default",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:02.000 GMT+1\\x1b[39m \\x1b[48;5;9m\\x1b[38;5;9m[\\x1b[39m\\x1b[30mERROR  \\x1b[39m\\x1b[38;5;9m]\\x1b[39m\\x1b[49m \\x1b[31m\\x1b[1m test1 >\\x1b[22m\\x1b[39m \\x1b[91merror\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:04.000 GMT+1\\x1b[39m \\x1b[48;5;9m\\x1b[38;5;9m[\\x1b[39m\\x1b[30mERROR  \\x1b[39m\\x1b[38;5;9m]\\x1b[39m\\x1b[49m \\x1b[31m\\x1b[1m test1 >\\x1b[22m\\x1b[39m \\x1b[91mError : true error default
" +
      "
" +
      "Error: true error default
" +
      "    at logTest (file:///home/whiteshoulders/perso/frugal/test/unit/log.test.ts:42:9)
" +
      "    at file:///home/whiteshoulders/perso/frugal/test/unit/log.test.ts:11:5
" +
      "    at innerWrapped (ext:cli/40_testing.js:482:11)
" +
      "    at asyncOpSanitizer (ext:cli/40_testing.js:148:33)
" +
      "    at resourceSanitizer (ext:cli/40_testing.js:364:31)
" +
      "    at exitSanitizer (ext:cli/40_testing.js:413:33)
" +
      "    at outerWrapped (ext:cli/40_testing.js:427:20)\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:06.000 GMT+1\\x1b[39m \\x1b[48;5;15m\\x1b[38;5;15m[\\x1b[39m\\x1b[30mINFO   \\x1b[39m\\x1b[38;5;15m]\\x1b[39m\\x1b[49m \\x1b[1m test1 >\\x1b[22m Error : true error
" +
      "
" +
      "Error: true error
" +
      "    at logTest (file:///home/whiteshoulders/perso/frugal/test/unit/log.test.ts:44:9)
" +
      "    at file:///home/whiteshoulders/perso/frugal/test/unit/log.test.ts:11:5
" +
      "    at innerWrapped (ext:cli/40_testing.js:482:11)
" +
      "    at asyncOpSanitizer (ext:cli/40_testing.js:148:33)
" +
      "    at resourceSanitizer (ext:cli/40_testing.js:364:31)
" +
      "    at exitSanitizer (ext:cli/40_testing.js:413:33)
" +
      "    at outerWrapped (ext:cli/40_testing.js:427:20)",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:08.000 GMT+1\\x1b[39m \\x1b[48;5;11m\\x1b[38;5;11m[\\x1b[39m\\x1b[30mWARNING\\x1b[39m\\x1b[38;5;11m]\\x1b[39m\\x1b[49m \\x1b[33m\\x1b[1m test1 >\\x1b[22m\\x1b[39m \\x1b[33mwarning\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:10.000 GMT+1\\x1b[39m \\x1b[48;5;15m\\x1b[38;5;15m[\\x1b[39m\\x1b[30mINFO   \\x1b[39m\\x1b[38;5;15m]\\x1b[39m\\x1b[49m \\x1b[1m test1 >\\x1b[22m info",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:16.000 GMT+1\\x1b[39m \\x1b[48;5;9m\\x1b[38;5;9m[\\x1b[39m\\x1b[30mERROR  \\x1b[39m\\x1b[38;5;9m]\\x1b[39m\\x1b[49m \\x1b[31m\\x1b[1m test2 >\\x1b[22m\\x1b[39m \\x1b[91merror\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:18.000 GMT+1\\x1b[39m \\x1b[48;5;11m\\x1b[38;5;11m[\\x1b[39m\\x1b[30mWARNING\\x1b[39m\\x1b[38;5;11m]\\x1b[39m\\x1b[49m \\x1b[33m\\x1b[1m test2 >\\x1b[22m\\x1b[39m \\x1b[33mwarning\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:20.000 GMT+1\\x1b[39m \\x1b[48;5;15m\\x1b[38;5;15m[\\x1b[39m\\x1b[30mINFO   \\x1b[39m\\x1b[38;5;15m]\\x1b[39m\\x1b[49m \\x1b[1m test2 >\\x1b[22m info",
  ],
]
`;

snapshot[`log: custom config 1`] = `
[
  [
    "\\x1b[90m01/01/1970 01:00:02.000 GMT+1\\x1b[39m \\x1b[48;5;9m\\x1b[38;5;9m[\\x1b[39m\\x1b[30mERROR  \\x1b[39m\\x1b[38;5;9m]\\x1b[39m\\x1b[49m \\x1b[31m\\x1b[1m test1 >\\x1b[22m\\x1b[39m \\x1b[91merror\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:04.000 GMT+1\\x1b[39m \\x1b[48;5;9m\\x1b[38;5;9m[\\x1b[39m\\x1b[30mERROR  \\x1b[39m\\x1b[38;5;9m]\\x1b[39m\\x1b[49m \\x1b[31m\\x1b[1m test1 >\\x1b[22m\\x1b[39m \\x1b[91mError : true error default
" +
      "
" +
      "Error: true error default
" +
      "    at logTest (file:///home/whiteshoulders/perso/frugal/test/unit/log.test.ts:42:9)
" +
      "    at file:///home/whiteshoulders/perso/frugal/test/unit/log.test.ts:30:5
" +
      "    at innerWrapped (ext:cli/40_testing.js:482:11)
" +
      "    at asyncOpSanitizer (ext:cli/40_testing.js:148:33)
" +
      "    at resourceSanitizer (ext:cli/40_testing.js:364:31)
" +
      "    at exitSanitizer (ext:cli/40_testing.js:413:33)
" +
      "    at outerWrapped (ext:cli/40_testing.js:427:20)\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:16.000 GMT+1\\x1b[39m \\x1b[48;5;9m\\x1b[38;5;9m[\\x1b[39m\\x1b[30mERROR  \\x1b[39m\\x1b[38;5;9m]\\x1b[39m\\x1b[49m \\x1b[31m\\x1b[1m test2 >\\x1b[22m\\x1b[39m \\x1b[91merror\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:18.000 GMT+1\\x1b[39m \\x1b[48;5;11m\\x1b[38;5;11m[\\x1b[39m\\x1b[30mWARNING\\x1b[39m\\x1b[38;5;11m]\\x1b[39m\\x1b[49m \\x1b[33m\\x1b[1m test2 >\\x1b[22m\\x1b[39m \\x1b[33mwarning\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:20.000 GMT+1\\x1b[39m \\x1b[48;5;15m\\x1b[38;5;15m[\\x1b[39m\\x1b[30mINFO   \\x1b[39m\\x1b[38;5;15m]\\x1b[39m\\x1b[49m \\x1b[1m test2 >\\x1b[22m info",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:22.000 GMT+1\\x1b[39m \\x1b[48;5;8m\\x1b[38;5;8m[\\x1b[39m\\x1b[30mDEBUG  \\x1b[39m\\x1b[38;5;8m]\\x1b[39m\\x1b[49m \\x1b[90m\\x1b[1m test2 >\\x1b[22m\\x1b[39m \\x1b[90mdebug\\x1b[39m",
  ],
  [
    "\\x1b[90m01/01/1970 01:00:24.000 GMT+1\\x1b[39m \\x1b[48;5;8m\\x1b[38;5;8m[\\x1b[39m\\x1b[30mVERBOSE\\x1b[39m\\x1b[38;5;8m]\\x1b[39m\\x1b[49m \\x1b[90m\\x1b[1m test2 >\\x1b[22m\\x1b[39m \\x1b[90mverbose\\x1b[39m",
  ],
]
`;
